# modern-data-bitcoin

./: .env.sample  README.md  pyproject.toml  setup.sh
src/: __main__.py  config.py  init_db.py
src/analysis/: indicators.py  statistics.py
src/dashboard/: app.py
src/dashboard/components/: charts.py  tables.py
src/dashboard/static/styles/: main.css
src/dashboard/styles/: main.css
src/data/: coinbase.py  processor.py
src/database/: models.py  operations.py
